--- a/lecm-errands/share/src/main/resources/alfresco/web-extension/ru/it/lecm/errands/form.properties
+++ b/lecm-errands/share/src/main/resources/alfresco/web-extension/ru/it/lecm/errands/form.properties
@@ -23,3 +23,4 @@ page.errands-reports=Errands Reports
 errands.number=Number
 
 field.changeExecutorCurrentExecutor.title=Current executor
+field.changeControllerCurrentController.title=Current controller
