Редактор Отчетов: реализован функционал "Новый шаблон на основе нд" и добавлена возможность выгружать файл-шаблона
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@3630 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-reports-editor/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/reports-editor/template-edit/template-edit.main.get.properties
+++ b/lecm-reports-editor/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/reports-editor/template-edit/template-edit.main.get.properties
@@ -6,3 +6,5 @@ label.unavaiable-page=Unavaiable page
 
 button.new-row=New Template
 label.create-report-dialog=Create Template
+
+button.export-template=Export Template
