--- a/lecm-reports-editor/repo/pom.xml
+++ b/lecm-reports-editor/repo/pom.xml
@@ -51,6 +51,10 @@
             <groupId>org.alfresco</groupId>
             <artifactId>alfresco-remote-api</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+        </dependency>
         <!-- Don't add here amp dependencies as it will break amp packaging -->
     </dependencies>
     <!--
