ALF-1225: Исполнить поручение
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@3639 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-errands/repo/src/main/config/messages/lecm-errands-workflow.properties
+++ b/lecm-errands/repo/src/main/config/messages/lecm-errands-workflow.properties
@@ -23,6 +23,6 @@ lecmErrandWf_model.property.lecmErrandWf_changeExecutorReason.title=Change execu
 lecmErrandWf_model.association.lecmErrandWf_changeExecutorNewExecutor.title=New executor
 
 lecmErrandWf_model.property.lecmErrandWf_changeControllerReason.title=Change controller reason
-lecmErrandWf_model.association.lecmErrandWf_changeControllerNewController.title=New controllerlecmErrandWf_model.association.lecmErrandWf_changeExecutorNewExecutor.title=New executor
+lecmErrandWf_model.association.lecmErrandWf_changeControllerNewController.title=New controller
 
 lecmErrandWf_model.property.lecmErrandWf_cancelReason.title=Cancel reason
