--- a/lecm-errands/share/src/main/resources/alfresco/web-extension/ru/it/lecm/errands/form.properties
+++ b/lecm-errands/share/src/main/resources/alfresco/web-extension/ru/it/lecm/errands/form.properties
@@ -24,3 +24,5 @@ errands.number=Number
 
 field.changeExecutorCurrentExecutor.title=Current executor
 field.changeControllerCurrentController.title=Current controller
+
+ru.it.errand.execute.message=Confirm errand execution
