ALF-1227: Утверждение Инициатором ALF-1226: Утверждение контроллером
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@3645 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-errands/repo/src/main/config/messages/lecm-errands-workflow.properties
+++ b/lecm-errands/repo/src/main/config/messages/lecm-errands-workflow.properties
@@ -26,3 +26,7 @@ lecmErrandWf_model.property.lecmErrandWf_changeControllerReason.title=Change con
 lecmErrandWf_model.association.lecmErrandWf_changeControllerNewController.title=New controller
 
 lecmErrandWf_model.property.lecmErrandWf_cancelReason.title=Cancel reason
+
+lecmErrandWf_model.property.lecmErrandWf_initiatorDeclineReason.title=Decline reason
+
+lecmErrandWf_model.property.lecmErrandWf_controllerDeclineReason.title=Decline reason
