--- a/lecm-errands/share/src/main/resources/alfresco/web-extension/ru/it/lecm/errands/form.properties
+++ b/lecm-errands/share/src/main/resources/alfresco/web-extension/ru/it/lecm/errands/form.properties
@@ -26,3 +26,7 @@ field.changeExecutorCurrentExecutor.title=Current executor
 field.changeControllerCurrentController.title=Current controller
 
 ru.it.errand.execute.message=Confirm errand execution
+
+ru.it.errand.initiatorApprove.message=Confirm approve
+
+ru.it.errand.controllerApprove.message=Confirm approve
