[+] Добавлена возможность создания документа из меню "Действия"
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@3661 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-statemachine-editor/repo/src/main/config/messages/lecm-statemachine-model.properties
+++ b/lecm-statemachine-editor/repo/src/main/config/messages/lecm-statemachine-model.properties
@@ -2,7 +2,7 @@ lecm-stmeditor_model.association.lecm-stmeditor_transitionStatus.title=Status
 lecm-stmeditor_model.association.lecm-stmeditor_role-assoc.title=Business Role
 lecm-stmeditor_model.property.lecm-stmeditor_workflowId.title=Workflow ID
 lecm-stmeditor_model.property.lecm-stmeditor_transitionExpression.title=Expression
-lecm-stmeditor_model.property.lecm-stmeditor_transitionLabel.title=Transition Name
+lecm-stmeditor_model.property.lecm-stmeditor_transitionLabel.title=Title
 lecm-stmeditor_model.property.lecm-stmeditor_conditionAccess.title=Expression Accessabily
 
 lecm-stmeditor_model.property.lecm-stmeditor_inputToValue.title=\u0418\u043C\u044F \u043F\u0435\u0440\u0435\u043C\u0435\u043D\u043D\u043E\u0439
@@ -48,6 +48,8 @@ lecm-stmeditor_model.property.lecm-stmeditor_stopSubWorkflows.title=Stop Sub-Pro
 #Status Properties
 lecm-stmeditor_model.property.lecm-stmeditor_takeFinishStateWithTransitionUser.title=Status Transition
 lecm-stmeditor_model.property.lecm-stmeditor_takeFinishStateWithTransitionWorkflow.title=Status Transition with Workflow Start
+lecm-stmeditor_model.property.lecm-stmeditor_takeFinishStateWithTransitionForm.title=
+lecm-stmeditor_model.property.lecm-stmeditor_takeFinishStateWithTransitionFormTrans.title=Status Transition with Workflow Start
 lecm-stmeditor_model.property.lecm-stmeditor_startWaitForDocumentChange.title=Document change waiting
 lecm-stmeditor_model.property.lecm-stmeditor_takeUserWorkflow.title=Workflow start
 lecm-stmeditor_model.property.lecm-stmeditor_endTransitionAction.title=Finish workflow waiting
@@ -57,6 +59,8 @@ lecm-stmeditor_model.property.lecm-stmeditor_endStartWorkflow.title=Start workfl
 lecm-stmeditor_model.property.lecm-stmeditor_endScriptAction.title=Script execution on state finish
 lecm-stmeditor_model.property.lecm-stmeditor_endEventScriptAction.title=Script execution on state finish
 lecm-stmeditor_model.property.lecm-stmeditor_startTimerAction.title=Time-out
+lecm-stmeditor_model.property.lecm-stmeditor_transitionFormType.title=
+lecm-stmeditor_model.property.lecm-stmeditor_transitionFormFolder.title=
 
 lecm-stmeditor_model.property.lecm-stmeditor_scriptLabel.title=Description
 lecm-stmeditor_model.property.lecm-stmeditor_actionScript.title=Script
