--- a/lecm-statemachine-editor/share/src/main/resources/alfresco/web-extension/ru/it/lecm/statemachine-editor/editor.properties
+++ b/lecm-statemachine-editor/share/src/main/resources/alfresco/web-extension/ru/it/lecm/statemachine-editor/editor.properties
@@ -20,6 +20,7 @@ statemachine.editor.form.label.expressions=Expressions
 statemachine.editor.form.label.statusFields=Available Fields for editing
 statemachine.editor.form.label.attacmentCategories=Available Attachment Categories
 statemachine.editor.form.label.alternatives=Transition condition
+statemachine.editor.form.label.inputFormData=
 
 statemachine.editor.form.info=Info
 statemachine.editor.form.behavior=Behavior
