рефакторинг вебскриптов объединил настроечные вебскрипты в один универсальный
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@3668 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-documents/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/documents/components-attacmnets/signing/document-signing.get.properties
+++ b/lecm-documents/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/documents/components-attacmnets/signing/document-signing.get.properties
@@ -10,3 +10,4 @@ label.send=Send to contractor
 label.read=Read by contrctor
 label.signatures.received=Signatures received
 message.setting.signable.failure=Error switching signable state
+message.sending.attachment.failure=Error sending document attachment to partner
