ALF-1399 На форме поручения строка со статусом должна быть кликабельной и открывать окно с историей смены статусов поручения
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@3677 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-errands/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/errands/components/form.get.properties
+++ b/lecm-errands/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/errands/components/form.get.properties
@@ -2,3 +2,5 @@ message.links.add.success=Links added
 message.links.add.failure=Links creation failure
 
 label.links.add.title=Add links
+label.links.button=Add link
+label.links.head=Links
