ALF-1271: Форма поручения (главная форма) - сохранение отчёта об исполднении
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@3680 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-errands/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/errands/components/form.get.properties
+++ b/lecm-errands/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/errands/components/form.get.properties
@@ -4,3 +4,9 @@ message.links.add.failure=Links creation failure
 label.links.add.title=Add links
 label.links.button=Add link
 label.links.head=Links
+
+message.setExecutionReport.success=Success set execution report
+message.setExecutionReport.failure=Failure set execution report
+message.errands.executionReport=Execution report
+message.errands.executionReport.save=Save
+message.errands.executionReport.clear=Clear
