--- a/lecm-signed-docflow/api/pom.xml
+++ b/lecm-signed-docflow/api/pom.xml
@@ -18,6 +18,12 @@
 			<groupId>org.alfresco</groupId>
 			<artifactId>alfresco-data-model</artifactId>
 		</dependency>
+	 <dependency>
+	  <groupId>org.json</groupId>
+	  <artifactId>json</artifactId>
+	  <version>20090211</version>
+	  <type>jar</type>
+	 </dependency>
 	</dependencies>
 
 </project>
