ALF-1271: Форма поручения (главная форма) - дочернии поручения
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@3703 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-errands/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/errands/components/form.get.properties
+++ b/lecm-errands/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/errands/components/form.get.properties
@@ -1,6 +1,8 @@
 message.eddand.fromEmployee =Errands send
 message.eddand.toEmployee=to employee
 
+message.eddand.employee.get=errand get
+
 message.eddand.onBasis=On basis
 
 message.eddand.limitationDate=Limitation date
