[+]ALF-1422 Доработка АРМа «Поручения»
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@3721 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-errands/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/errands/menu/menu.get.properties
+++ b/lecm-errands/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/errands/menu/menu.get.properties
@@ -1,3 +1,4 @@
 lecm.errands.list.btn=Errands List
 lecm.errands.reports.btn=Reports
 lecm.errands.tasks.btn=Unit Tasks
+lecm.errands.archive.btn=Archive
