--- a/lecm-permission-exp/repo/pom.xml
+++ b/lecm-permission-exp/repo/pom.xml
@@ -35,13 +35,12 @@
         <dependency>
             <groupId>ru.it.lecm.base</groupId>
             <artifactId>base-repo-api</artifactId>
-            <version>${project.version}</version>
-            <type>jar</type>
+            <version>${platform.version}</version>
+			<scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.json</groupId>
             <artifactId>json</artifactId>
-            <type>jar</type>
         </dependency>
         <dependency>
             <groupId>org.alfresco</groupId>
@@ -55,19 +54,13 @@
             <groupId>ru.it.lecm.orgstructure</groupId>
             <artifactId>orgstructure-repo-api</artifactId>
             <version>${project.version}</version>
-            <type>jar</type>
+			<scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>ru.it.lecm.dictionary</groupId>
             <artifactId>dictionary-repo-api</artifactId>
             <version>${project.version}</version>
-            <type>jar</type>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.social</groupId>
-            <artifactId>spring-social-alfresco</artifactId>
-            <version>0.2.8-RELEASE</version>
-            <type>jar</type>
+			<scope>provided</scope>
         </dependency>
     </dependencies>
     <!--
