--- a/lecm-jasperreports-forms/repo/pom.xml
+++ b/lecm-jasperreports-forms/repo/pom.xml
@@ -19,7 +19,7 @@
 	<description>jasperforms forms repo</description>
 
 	<properties>
-		<dependency.opencmis.version>0.7.0</dependency.opencmis.version>
+		<!-- <dependency.opencmis.version>0.7.0</dependency.opencmis.version> -->
 		<xalan.version>2.5.1</xalan.version>
 		<xerces.version>2.8.0</xerces.version>
 	</properties>
@@ -108,6 +108,7 @@
 			<version>${xerces.version}</version>
 		</dependency>
 
+		<!--
 		<dependency>
 			<groupId>org.apache.chemistry.opencmis</groupId>
 			<artifactId>chemistry-opencmis-client-impl</artifactId>
@@ -119,6 +120,7 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
+		  -->
 
 		<dependency>
 			<groupId>ru.it.lecm.base</groupId>
