ALF-1419 Редизайн дашлета "мои поручения"
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@3732 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-errands/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/errands/dashlets/my-errands/my-errands.get.properties
+++ b/lecm-errands/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/errands/dashlets/my-errands/my-errands.get.properties
@@ -3,6 +3,8 @@ label.load-failed=Could not load errands list
 label.not-record=Not records
 
 label.important=Important
+label.is-expired=Expired
+dashlet.arm.tooltip=ARM
 
 ## Note to translators: Please retain the HTML tags in the dashlet.help message.
 dashlet.help=<p>This dashlet displays a list of "my" assignments in the form of a list representation</p>
