--- a/lecm-errands/repo/pom.xml
+++ b/lecm-errands/repo/pom.xml
@@ -53,6 +53,16 @@
 		    <groupId>org.slf4j</groupId>
 		    <artifactId>slf4j-api</artifactId>
 	    </dependency>
+		<dependency>
+			<groupId>net.sf.jasperreports</groupId>
+			<artifactId>jasperreports</artifactId>
+		</dependency>
+		<!-- we can use any version of jasperfonts cause it has only resources data -->
+		<dependency>
+			<groupId>net.sf.jasperreports</groupId>
+			<artifactId>jasperreports-fonts</artifactId>
+			<version>4.0.0</version>
+		</dependency>
 	    <dependency>
 		    <groupId>ru.it.lecm.errands</groupId>
 		    <artifactId>errands-repo-api</artifactId>
@@ -139,6 +149,10 @@
                 <artifactId>maven-compiler-plugin</artifactId>
             </plugin>
             <plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>jasperreports-maven-plugin</artifactId>
+			</plugin>
+			<plugin>
                 <groupId>org.alfresco.maven.plugin</groupId>
                 <artifactId>maven-amp-plugin</artifactId>
             </plugin>
@@ -164,6 +178,11 @@
                     <exclude>**README-*</exclude>
                 </excludes>
             </resource>
+			<resource>
+				<filtering>true</filtering>
+				<directory>src/main/config/reportdefinitions</directory>
+				<targetPath>reportdefinitions</targetPath>
+			</resource>
         </resources>
     </build>
 </project>
