ALF-1271: Форма поручения (главная форма) - проверка редактируемости полей на статусе
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@3794 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-errands/share/src/main/resources/alfresco/web-extension/ru/it/lecm/errands/form.properties
+++ b/lecm-errands/share/src/main/resources/alfresco/web-extension/ru/it/lecm/errands/form.properties
@@ -3,6 +3,8 @@ button.<lecm-errands_document.new=New Errand
 label.create-lecm-errands_document=Create Errand
 label.filter-lecm-errands_document=Errands
 
+field.childErrands.title=Child errands
+
 page.errands.filter.label=(filtered)
 
 header.errands-list.label=Errands
