--- a/lecm-signed-docflow/repo/pom.xml
+++ b/lecm-signed-docflow/repo/pom.xml
@@ -86,6 +86,16 @@
 			<version>${platform.version}</version>
 			<scope>provided</scope>
 		</dependency>
+	 <dependency>
+	  <groupId>org.alfresco</groupId>
+	  <artifactId>alfresco-remote-api</artifactId>
+	 </dependency>
+	 <dependency>
+	  <groupId>org.apache.commons</groupId>
+	  <artifactId>com.springsource.org.apache.commons.compress</artifactId>
+	  <version>1.1.0</version>
+	  <type>jar</type>
+	 </dependency>
 	</dependencies>
 	<!--
 	   The scm is required for the buildnumber-maven-plugin which is required
