--- a/lecm-contractors/repo/src/main/config/messages/contractor.properties
+++ b/lecm-contractors/repo/src/main/config/messages/contractor.properties
@@ -9,7 +9,7 @@ lecm-contractor_contractors-dictionary.type.lecm-legalform_legalform-type.title=
 
 lecm-contractor_contractors-dictionary.property.lecm-contractor_interaction-type.title=\u0412\u0437\u0430\u0438\u043C\u043E\u0434\u0435\u0439\u0441\u0442\u0432\u0438\u0435 \u0441 \u043A\u043E\u043D\u0442\u0440\u0430\u0433\u0435\u043D\u0442\u043E\u043C, \u042E\u0417\u0414
 lecm-contractor_contractors-dictionary.property.lecm-contractor_fullname.title=\u041F\u043E\u043B\u043D\u043E\u0435 \u043D\u0430\u0438\u043C\u0435\u043D\u043E\u0432\u0430\u043D\u0438\u0435
-lecm-contractor_contractors-dictionary.property.lecm-contractor_shortname.title=\u0421\u043E\u043A\u0440\u0430\u0449\u0435\u043D\u043D\u043E\u0435 \u043D\u0430\u0438\u043C\u0435\u043D\u043E\u0432\u0430\u043D\u0438\u0435
+lecm-contractor_contractors-dictionary.property.lecm-contractor_shortname.title=\u041A\u0440\u0430\u0442\u043A\u043E\u0435 \u043D\u0430\u0438\u043C\u0435\u043D\u043E\u0432\u0430\u043D\u0438\u0435
 lecm-contractor_contractors-dictionary.property.lecm-contractor_comment.title=\u041A\u043E\u043C\u043C\u0435\u043D\u0442\u0430\u0440\u0438\u0439
 lecm-contractor_contractors-dictionary.property.lecm-contractor_legal-address.title=\u042E\u0440\u0438\u0434\u0438\u0447\u0435\u0441\u043A\u0438\u0439 \u0430\u0434\u0440\u0435\u0441
 lecm-contractor_contractors-dictionary.property.lecm-contractor_physical-address.title=\u0424\u0430\u043A\u0442\u0438\u0447\u0435\u0441\u043A\u0438\u0439 \u0430\u0434\u0440\u0435\u0441
@@ -23,7 +23,7 @@ lecm-contractor_contractors-dictionary.property.lecm-contractor_OKOGU.title=\u04
 lecm-contractor_contractors-dictionary.property.lecm-contractor_KPP.title=\u041A\u041F\u041F
 lecm-contractor_contractors-dictionary.property.lecm-contractor_OGRN.title=\u041E\u0413\u0420\u041D
 lecm-contractor_contractors-dictionary.property.lecm-contractor_transactional-account.title=\u0420\u0430\u0441\u0447\u0435\u0442\u043D\u044B\u0439 \u0441\u0447\u0435\u0442
-lecm-contractor_contractors-dictionary.property.lecm-contractor_correspondent-account.title=\u041A\u043E\u0440\u0440\u0435\u0441\u043F\u043E\u043D\u0434\u0435\u043D\u0442\u0441\u043A\u0438\u0439 \u0441\u0447\u0435\u0442
+lecm-contractor_contractors-dictionary.property.lecm-contractor_correspondent-account.title=\u041A\u043E\u0440\u0440. \u0441\u0447\u0435\u0442
 lecm-contractor_contractors-dictionary.property.lecm-contractor_BIK.title=\u0411\u0418\u041A
 lecm-contractor_contractors-dictionary.property.lecm-contractor_bankname.title=\u041D\u0430\u0438\u043C\u0435\u043D\u043E\u0432\u0430\u043D\u0438\u0435 \u0431\u0430\u043D\u043A\u0430
 lecm-contractor_contractors-dictionary.property.lecm-contractor_bank-location.title=\u041C\u0435\u0441\u0442\u043E\u043F\u043E\u043B\u043E\u0436\u0435\u043D\u0438\u0435 \u0431\u0430\u043D\u043A\u0430
