ALF-1263. 9.5 Задачи подразделения. Диаграмма Ганта [~]подправлен пагинатор [~]подправлен формат даты [~]подправлены переводы
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@3863 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-errands/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/errands/diagram/errands-diagram.get.properties
+++ b/lecm-errands/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/errands/diagram/errands-diagram.get.properties
@@ -15,8 +15,11 @@ column.month6=July
 column.month7=August
 column.month8=September
 column.month9=October
-column.month10=\u043D\u043E\u044F\u0431\u0440\u044C
-column.month11=\u0434\u0435\u043A\u0430\u0431\u0440\u044C
+column.month10=November
+column.month11=December
+
+pagination.template={CurrentPageReport}</span> &nbsp; {PreviousPageLink} {PageLinks} {NextPageLink}
+pagination.template.page-report={startRecord} - {endRecord} of {totalRecords}
 
 label.day=d
 label.unknown=unknown
