--- a/lecm-signed-docflow/repo/pom.xml
+++ b/lecm-signed-docflow/repo/pom.xml
@@ -91,10 +91,8 @@
 	  <artifactId>alfresco-remote-api</artifactId>
 	 </dependency>
 	 <dependency>
-	  <groupId>org.apache.commons</groupId>
-	  <artifactId>com.springsource.org.apache.commons.compress</artifactId>
-	  <version>1.1.0</version>
-	  <type>jar</type>
+		 <groupId>org.apache.commons</groupId>
+		 <artifactId>commons-compress</artifactId>
 	 </dependency>
 	</dependencies>
 	<!--
