ALF-1263. 9.5 Задачи подразделения. Диаграмма Ганта [~] подправил цвет выделения. Просроченные поручения подчеркиваются "Оранжевым" цветом, аналогично цвету выделения в дашлете "Мои поручения". "Важные" поручения выделяются красным цветом, если поручение не помечено как "Важное" проверяется есть ли контролер у поручения, если есть подчеркиваем "Зеленым" цветом. Остальные поручения не являющиеся Просроченными, Важными, На контроле подчеркиваются синим цветом. Просроченны: Оранжевый Важные: Красным На контроле: Зеленым Остальные: синим цветом
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@3872 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-errands/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/errands/diagram/errands-diagram.get.properties
+++ b/lecm-errands/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/errands/diagram/errands-diagram.get.properties
@@ -18,6 +18,11 @@ column.month9=October
 column.month10=November
 column.month11=December
 
+label.is-expired=expired
+label.is-important=important
+label.in-controler=in controler
+label.errand=errand
+
 pagination.template={CurrentPageReport}</span> &nbsp; {PreviousPageLink} {PageLinks} {NextPageLink}
 pagination.template.page-report={startRecord} - {endRecord} of {totalRecords}
 
