[ALF-1365] Блокировка после отправки контрагенту [ALF-1478] Теперь для работы с подписыванием необходимо либо быть руководителем, либо входить в бизнес роль с идентефикатором BR_SIGNING
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@3889 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-documents/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/documents/components/attachments/list/attachments.list.get.properties
+++ b/lecm-documents/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/documents/components/attachments/list/attachments.list.get.properties
@@ -2,3 +2,5 @@ button.upload.file=Upload file
 actions.more=More
 edit-details.title=Edit metadata
 edit-details.label.edit-metadata=Edit metadata
+
+details.banner.lock-owner=Document is blocked
