Отчёты [ALF-1402] В сформированном листе согласования, вместо должности указывается - null + отчёт "Лист согласования" убран из карточки документа + отчёт поручений "Продуктивность по подразделениям"
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@3898 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-jasperreports-forms/repo/src/main/config/log4j.properties
+++ b/lecm-jasperreports-forms/repo/src/main/config/log4j.properties
@@ -41,4 +41,4 @@
 log4j.logger.ru.it.lecm.forms=${module.log.level}
 log4j.logger.ru.it.lecm.reports=${module.log.level}
 log4j.logger.ru.it.lecm.utils=${module.log.level}
-log4j.logger.ru.it.lecm.reports.model.DAO=debug
+log4j.logger.ru.it.lecm.reports.model.DAO=${module.log.level}
