добавил в модель оргструктуры поле КПП, это поле необходимо для работы с unicloud gate. Потому что в unicloud gate организации идентифицируются по ИНН и КПП. расширил EResponseType кодом InternalError и обернул отправку документа контрагенту в try {} catch. Теперь, что бы ни случилось, будет либо OK или InternalError
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@3910 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-orgstructure/repo/src/main/config/messages/orgstructure.properties
+++ b/lecm-orgstructure/repo/src/main/config/messages/orgstructure.properties
@@ -33,7 +33,9 @@ lecm-orgstr_organizationStructure.property.lecm-orgstr_org-fax.description=Fax N
 lecm-orgstr_organizationStructure.property.lecm-orgstr_org-email.title=E-Mails
 lecm-orgstr_organizationStructure.property.lecm-orgstr_org-email.description=E-Mails
 lecm-orgstr_organizationStructure.property.lecm-orgstr_org-tin.title=TIN
-lecm-orgstr_organizationStructure.property.lecm-orgstr_org-tin.description=TIN
+lecm-orgstr_organizationStructure.property.lecm-orgstr_org-tin.description=Taxpayer Identification Number
+lecm-orgstr_organizationStructure.property.lecm-orgstr_org-kpp.title=KPP
+lecm-orgstr_organizationStructure.property.lecm-orgstr_org-kpp.description=Industrial Enterprise Classification Code
 lecm-orgstr_organizationStructure.property.lecm-orgstr_org-ownership-type.title=Type of ownership
 lecm-orgstr_organizationStructure.property.lecm-orgstr_org-ownership-type.description=Type of ownership
 lecm-orgstr_organizationStructure.property.lecm-orgstr_org-incorporation-form.title=Form of incorporation
