1) Реализована отправка подписанных документов контрагенту по электронной почте. 2) В сервис регномеров добален новый счетчик для использования его в учете писем с подписанным контентом. 3) Из сервиса регномеров удалены ненужные synchronized. 4) Из сервиса документооборота удалены ненужные зависимости.
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@3942 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-signed-docflow/repo/pom.xml
+++ b/lecm-signed-docflow/repo/pom.xml
@@ -59,6 +59,12 @@
 			<artifactId>slf4j-api</artifactId>
 		</dependency>
 		<dependency>
+			<groupId>javax.mail</groupId>
+			<artifactId>com.springsource.javax.mail</artifactId>
+			<version>1.4.0</version>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
 			<groupId>ru.it.lecm.orgstructure</groupId>
 			<artifactId>orgstructure-repo-api</artifactId>
 			<version>${platform.version}</version>
@@ -97,6 +103,12 @@
 		<dependency>
 			<groupId>ru.it.lecm.dictionary</groupId>
 			<artifactId>dictionary-repo-api</artifactId>
+			<version>${platform.version}</version>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>ru.it.lecm.regnumbers</groupId>
+			<artifactId>lecm-regnumbers-repo-api</artifactId>
 			<version>${platform.version}</version>
 			<scope>provided</scope>
 		</dependency>
