[ALF-1326] Настройки для крипто-апплета вынесены в профиль пользователя
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@3955 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-signed-docflow/share/src/main/resources/alfresco/web-extension/ru/it/lecm/signed-docflow/form.properties
+++ b/lecm-signed-docflow/share/src/main/resources/alfresco/web-extension/ru/it/lecm/signed-docflow/form.properties
@@ -2,3 +2,5 @@ aspect.lecm-signed-docflow_signable=Signable
 info.sign=Signature
 actions.document.unlock=Unlock document
 
+page.user-profile.applet-settings.title=My profile > crypto-applet settings
+
