--- a/lecm-user-profile/share/src/main/resources/alfresco/web-extension/ru/it/lecm/user-profile/form.properties
+++ b/lecm-user-profile/share/src/main/resources/alfresco/web-extension/ru/it/lecm/user-profile/form.properties
@@ -5,6 +5,7 @@ label.user-profile.menu.absence.btn=Manage my future absence
 label.user-profile.menu.delegation.btn=Manage my delegayion settings
 label.user-profile.menu.errands-settings.btn=Errands settings
 label.user-profile.menu.notifications-settings.btn=Notifications settings
+label.user-profile.menu.applet-settings.btn=Crypto-applet settings
 header.user-profile.label=Logic ECM: My profile
 header.user-profile.description=Manage your personal settings
 page.user-profile.delegation.title=My profile > Delegation
