--- a/lecm-signed-docflow/repo/src/main/config/messages/signed-docflow.properties
+++ b/lecm-signed-docflow/repo/src/main/config/messages/signed-docflow.properties
@@ -4,3 +4,4 @@ lecm-signed-docflow_signed-docflow.aspect.lecm-signed-docflow_signable.title=Sig
 lecm-signed-docflow_signed-docflow.property.lecm-signed-docflow_applet-key.title=Crypto-applet license key
 lecm-signed-docflow_signed-docflow.property.lecm-signed-docflow_applet-cert.title=Crypto-applet cert
 lecm-signed-docflow_signed-docflow.property.lecm-signed-docflow_applet-container.title=Crypto-applet cert container
+lecm-signed-docflow_signed-docflow.property.lecm-signed-docflow_auth-type.title=Authentication type
