1) человекочитаемое название подписи перенесено из cm:name в lecm-signed-docflow:name 2) подписи индексируются только по двум атрибутам: lecm-signed-docflow:content-ref, lecm-signed-docflow:document-ref. Индексирование по всем остальным атрибутам отключено, кроме стандартных. 3) все настройки связанные с ЭЦП перенесены в профиль пользователя и добавляются аспектом в объект lecm-orgstr:employee
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@3959 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-signed-docflow/repo/src/main/config/messages/signed-docflow.properties
+++ b/lecm-signed-docflow/repo/src/main/config/messages/signed-docflow.properties
@@ -5,3 +5,5 @@ lecm-signed-docflow_signed-docflow.property.lecm-signed-docflow_applet-key.title
 lecm-signed-docflow_signed-docflow.property.lecm-signed-docflow_applet-cert.title=Crypto-applet cert
 lecm-signed-docflow_signed-docflow.property.lecm-signed-docflow_applet-container.title=Crypto-applet cert container
 lecm-signed-docflow_signed-docflow.property.lecm-signed-docflow_auth-type.title=Authentication type
+
+lecm-signed-docflow_signed-docflow.property.lecm-signed-docflow_name.title=Name
