ALF-1527: В дашлете "Мои задачи" при поступлении задач на отмену поручения или задач на изменение срока поручения в ссылке указано "Нет сообщений"
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@4043 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-approval/share/src/main/resources/alfresco/web-extension/ru/it/lecm/approval/form.properties
+++ b/lecm-approval/share/src/main/resources/alfresco/web-extension/ru/it/lecm/approval/form.properties
@@ -17,3 +17,4 @@ approvalList.report.success=Report formed succesfully
 approvalList.report.failure=Report failed
 field.comment.file=File
 
+ru.it.approval.workflowDescription.message=Approval
