--- a/lecm-errands/share/src/main/resources/alfresco/web-extension/ru/it/lecm/errands/form.properties
+++ b/lecm-errands/share/src/main/resources/alfresco/web-extension/ru/it/lecm/errands/form.properties
@@ -32,3 +32,6 @@ ru.it.errand.execute.message=Confirm errand execution
 ru.it.errand.initiatorApprove.message=Confirm approve
 
 ru.it.errand.controllerApprove.message=Confirm approve
+
+ru.it.erranderrand.requestCancel.workflowDescription.message=Request cancel
+ru.it.errand.requestDueDateChange.workflowDescription.message=Request due date change
