ЮЗД: Базовая реализация отображения статусов "Прочитано контрагентом" и "Подписей получено" на карточке вложения GLOBAL: Добавлен иконочный шрифт (361 иконка) Font Awesome (http://fortawesome.github.io/Font-Awesome/)
Полный список иконок можно посмотреть тут: http://fortawesome.github.io/Font-Awesome/icons/

Использование
Там, где надо добавить иконку добавляем разметку: <i class="имя-иконки"></i>

Пример
<i class="icon-ok"></i>

Если хотим другой размер
"Increase the icon size by using the icon-large (33% increase), icon-2x, icon-3x, or icon-4x classes."

Больше примеров: http://fortawesome.github.io/Font-Awesome/examples/

Для yuicompressor-maven-plugin добавил исключение на *.min.js и *.min.css, чтобы не сжимать то, что уже сжато.

git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@4064 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/pom.xml
+++ b/pom.xml
@@ -440,6 +440,10 @@
 						<excludes>
 							<exclude>**/alfresco/site-webscripts/**/*.js</exclude>
 							<exclude>**/alfresco/templates/**/*.js</exclude>
+
+							<!-- Не пакуем то, что уже упаковано (knockout.js, font-awesome.css) -->
+							<exclude>**/*.min.js</exclude>
+							<exclude>**/*.min.css</exclude>
 						</excludes>
 					</configuration>
 					<dependencies>
