--- a/lecm-reports-editor/repo/pom.xml
+++ b/lecm-reports-editor/repo/pom.xml
@@ -44,6 +44,11 @@
             <version>${project.version}</version>
         </dependency>
         <dependency>
+            <groupId>ru.it.lecm.reports</groupId>
+            <artifactId>lecm-reports-api</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
             <groupId>org.springframework.extensions.surf</groupId>
             <artifactId>spring-webscripts</artifactId>
         </dependency>
