[~] Изменение формы ввода переменных для действия создания документа
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@4161 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-statemachine-editor/repo/src/main/config/messages/lecm-statemachine-model.properties
+++ b/lecm-statemachine-editor/repo/src/main/config/messages/lecm-statemachine-model.properties
@@ -10,6 +10,10 @@ lecm-stmeditor_model.property.lecm-stmeditor_inputFromType.title=\u0422\u0438\u0
 lecm-stmeditor_model.property.lecm-stmeditor_inputToType.title=\u0422\u0438\u043F
 lecm-stmeditor_model.property.lecm-stmeditor_inputFromValue.title=\u0417\u043D\u0430\u0447\u0435\u043D\u0438\u0435
 
+lecm-stmeditor_model.property.lecm-stmeditor_formInputToValue.title=\u0418\u043C\u044F \u043F\u0435\u0440\u0435\u043C\u0435\u043D\u043D\u043E\u0439
+lecm-stmeditor_model.property.lecm-stmeditor_formInputFromType.title=\u0422\u0438\u043F
+lecm-stmeditor_model.property.lecm-stmeditor_formInputFromValue.title=\u0417\u043D\u0430\u0447\u0435\u043D\u0438\u0435
+
 lecm-stmeditor_model.property.lecm-stmeditor_isCreator.title=Creator
 lecm-stmeditor_model.property.lecm-stmeditor_staticRolesList.title=Static roles
 lecm-stmeditor_model.property.lecm-stmeditor_dynamicRolesList.title=Dynamic roles
