[+] ALF-1547. Автоматический редеплой процессов при перезагрузке.
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@4228 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/pom.xml
+++ b/pom.xml
@@ -71,6 +71,7 @@
 		<buildNumber>1</buildNumber>
 		<client.debug>false</client.debug>
 		<module.log.level>info</module.log.level>
+        <redeploy.process.definitions>false</redeploy.process.definitions>
 		<repo.jscript.ScriptLogger>info</repo.jscript.ScriptLogger>
 		<apache.cxf.version>2.7.5</apache.cxf.version>
 	</properties>
@@ -539,6 +540,11 @@
 				<module.log.level>debug</module.log.level>
 				<repo.jscript.ScriptLogger>debug</repo.jscript.ScriptLogger>
 			</properties>
+		</profile>
+		<profile>
+			<id>redeploy-process-definitions</id>
+			<properties>
+                <redeploy.process.definitions>true</redeploy.process.definitions>			</properties>
 		</profile>
 	</profiles>
 </project>
