--- a/lecm-model-editor/share/pom.xml
+++ b/lecm-model-editor/share/pom.xml
@@ -32,6 +32,13 @@
             <groupId>org.springframework</groupId>
             <artifactId>spring-beans</artifactId>
         </dependency>
+        
+        <dependency>
+            <groupId>org.springframework.extensions.surf</groupId>
+            <artifactId>spring-webscripts</artifactId>
+        </dependency>
+        
+        
 		<!-- Don't add here amp dependencies as it will break amp packaging -->
 	</dependencies>
 
