ALF-1566: Автоматическая очистка временных директорий пользователей
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@4431 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-base/repo/pom.xml
+++ b/lecm-base/repo/pom.xml
@@ -83,6 +83,10 @@
 		    <artifactId>documents-repo-api</artifactId>
 		    <version>${project.version}</version>
 	    </dependency>
+	    <dependency>
+		    <groupId>org.quartz-scheduler</groupId>
+		    <artifactId>quartz</artifactId>
+	    </dependency>
     </dependencies>
     <!--
        The scm is required for the buildnumber-maven-plugin which is required
