добавлен модуль интерграции с iPad клиентом
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@4475 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/pom.xml
+++ b/pom.xml
@@ -108,6 +108,7 @@
 		<module>lecm-semantic-assist</module>
 		<module>lecm-permission-exp</module>
 		<module>lecm-signed-docflow</module>
+        <module>lecm-iReferent-integration</module>
 	</modules>
 	<scm>
 		<connection>scm:svn:https://svn.datateh.ru/alfrescoecm/Business Platform/trunk/</connection>
