--- a/server/alfresco/pom.xml
+++ b/server/alfresco/pom.xml
@@ -319,6 +319,13 @@
             <scope>runtime</scope>
             <type>amp</type>
         </dependency>
+        <dependency>
+            <groupId>ru.it.lecm.iReferent-integration</groupId>
+            <artifactId>iReferent-integration-repo</artifactId>
+            <version>${platform.version}</version>
+            <scope>runtime</scope>
+            <type>amp</type>
+        </dependency>
     </dependencies>
 
 	<build>
