--- a/server/share/pom.xml
+++ b/server/share/pom.xml
@@ -270,6 +270,13 @@
             <type>amp</type>
             <scope>runtime</scope>
         </dependency>
+        <dependency>
+            <groupId>ru.it.lecm.iReferent-integration</groupId>
+            <artifactId>iReferent-integration-share</artifactId>
+            <version>${platform.version}</version>
+            <scope>runtime</scope>
+            <type>amp</type>
+        </dependency>
 	</dependencies>
 
 	<build>
