ALF-1600 При наведении на "Поручение" во всплывающем списке "Еще" указывается некорректное название модуля
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@4682 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-errands/share/src/main/resources/alfresco/web-extension/ru/it/lecm/errands/form.properties
+++ b/lecm-errands/share/src/main/resources/alfresco/web-extension/ru/it/lecm/errands/form.properties
@@ -8,6 +8,7 @@ field.childErrands.title=Child errands
 page.errands.filter.label=(filtered)
 
 header.errands-list.label=Errands
+header.errands-list.description=Errands
 
 tool.errands-settings.label=Errands settings
 tool.errands-settings.description=Errands settings
